--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 sqlalchemy==2.0.23
 alembic==1.13.1
+
+# Code quality tools (optional)
+flake8==6.1.0
+black==23.12.0
+isort==5.13.2
