--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 sqlalchemy==2.0.23
 alembic==1.13.1
+psycopg2-binary==2.9.9
 
 # Code quality tools (optional)
 flake8==6.1.0
