--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ email-validator==2.1.0
 authlib==1.3.0
 httpx==0.26.0
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib[argon2]==1.7.4
 python-multipart==0.0.6
 itsdangerous==2.1.2
 pytest==7.4.3
